cmake_minimum_required(VERSION 3.9)
project(yyyyyy)

set(CMAKE_CXX_STANDARD 11)

add_executable(yyyyyy
        IO.cpp
        IO.h
        LinkedList.h
        main.cpp
        Map.h
        Person.cpp
        Person.h
        PersonInfo.h
        PersonInfocpp.cpp
        PersonNo.cpp
        PersonNo.h
        Relation.cpp
        Relation.h)
